$Id$

				MBSEBBS History.

v0.35.03	06-Jul-2002


v0.35.02	22-Jun-2002 - 06-Jul-2002

	upgrade:
		Delete ~/etc/lastcall.data
		Delete ~/etc/archiver.data
		Start mbsetup and enter the Edit Archiver Programs. The new
		values should now be set.

	general:
		Added checks for GoldED in external program checks.
		Added new empty path /opt/mbse/var/boxes.
		Implemented nodes private outbound boxes.
		Revised the dependencies for all sourcefiles.

	common.a:
		Added debug nodelist IFT flag for logging.
		Added archive detection for tar, gzip and compress.

	mbsetup:
		Changed node records layout into 8 screens to be able to add
		more settings. New settings not in use yet are disabled.
		Added settings for node contact information. This is private
		for mbsetup use only.
		Implemented nodes special outbound box setup. When you enter
		that item for the first time, it fills this with a suggested
		path.
		Changed description and filetype for default tar gzipped files
		in archiver setup.
		Added default records for bzip2 and uncompressed tar files.

	mbcico:
		Implemented nodes special outbound boxes.
		Corrected a problem with getting modem aftercall info from ISDN
		modems.

	mbout:
		Implemented nodes special outbound boxes.

	mbfido:
		In newsmode when a mesage is received with an illegal formated
		date headerline, the date is replaced with the current date 
		and time. Possible cause: SunMail 1.0
		When reading taglists if there was no description after the
		tag, mbfido would crash.
		Filefind netmail replies now set the private flag.
		Removed debugging messages displaying the incoming tic files.
		The mbfid test command now needs a extra parameter, the final
		destination to test. It doesn't use the internal fixed table
		anymore.

	mbindex:
		Fixed a crash when a pointlist contained Point,5,reservered,
		and nothing more.
		Added nopper code to prevent timeout on slow systems with 
		large pointlists to compile.

	mbsebbs: