@@ -4,6 +4,9 @@ $Id$
 
 v0.35.03	06-Jul-2002
 
+	mbcico:
+		Changed IsDoing information.
+
 
 v0.35.02	22-Jun-2002 - 06-Jul-2002
 
